@@ -3,6 +3,8 @@ norecursedirs = attic .tox
 addopts = -rs
 rsyncdirs = devpi testing
 rsyncignore = .tox
+flakes-ignore =
+    test_*.py ImportStarUsed
 
 [tox]
 envlist = version,py27,py26
