@@ -51,3 +51,5 @@ python_functions=test
 pep8ignore = E401 E225 E261 E128 E124 E302
 norecursedirs = .tox ja
 rsyncdirs = devpi_server testing
+flakes-ignore =
+    test_*.py ImportStarUsed
