@@ -1,6 +1,6 @@
 #! /usr/bin/env python
 
-import os, sys
+import os
 from setuptools import setup
 
 if __name__ == "__main__":
